Update Spanish translation

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,64 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="cancel">Cancela</string>
-    <string name="done">Ok</string>
-    <string name="hidesong">¿Realmente desea ocultar esta canción? El tiempo de reproducción y la caché se borrarán. Esta acción es irreversible.</string>
-    <string name="new_playlist">Nueva playlist</string>
-    <string name="start_radio">Escuchar radio</string>
+    <string name="cancel">Cancelar</string>
+    <string name="done">Hecho</string>
+    <string name="hidesong">¿Seguro que quieres ocultar esta canción? El tiempo de reproducción y la caché se borrarán. Esta acción es irreversible.</string>
+    <string name="new_playlist">Nueva lista de reproducción</string>
+    <string name="start_radio">Iniciar radio</string>
     <string name="equalizer">Ecualizador</string>
-    <string name="stop_sleep_timer">¿Apaga el temporizador de apagado?</string>
-    <string name="set_sleep_timer">Temporizador apagado</string>
-    <string name="add_to_playlist">Añadir a la playlist</string>
+    <string name="stop_sleep_timer">¿Detener el temporizador de apagado?</string>
+    <string name="set_sleep_timer">Temporizador de apagado</string>
+    <string name="add_to_playlist">Añadir a la lista de reproducción</string>
     <string name="go_to_album">Ver álbum</string>
-    <string name="remove_from_queue">Remover de la cola</string>
-    <string name="remove_from_playlist">Remover de la playlist</string>
-    <string name="hide">Esconde</string>
-    <string name="hide_from_quick_picks">Ocultar de \"Métodos abreviados\"</string>
+    <string name="remove_from_queue">Eliminar de la cola</string>
+    <string name="remove_from_playlist">Eliminar de la lista de reproducción</string>
+    <string name="hide">Esconder</string>
+    <string name="hide_from_quick_picks">Ocultar de las \"selecciones rápidas\"</string>
     <string name="related_albums">Álbumes relacionados</string>
     <string name="similar_artists">Artistas similares</string>
-    <string name="playlists_you_might_like">Playlist que podrían gustarte</string>
-    <string name="an_error_has_occurred">Ha habido un error</string>
-    <string name="albums">Álbum</string>
+    <string name="playlists_you_might_like">Listas de reproducción que podrían gustarte</string>
+    <string name="an_error_has_occurred">Ha ocurrido un error</string>
+    <string name="albums">Álbumes</string>
     <string name="artists">Artistas</string>
-    <string name="enter_the_playlist_name">Introduzca el nombre de la playlist</string>
-    <string name="playlists">Playlist</string>
+    <string name="enter_the_playlist_name">Introduce el nombre de la lista de reproducción</string>
+    <string name="playlists">Listas de reproducción</string>
     <string name="favorites">Favoritos</string>
-    <string name="offline">Offline</string>
-    <string name="quick_picks">Métodos abreviados</string>
+    <string name="offline">Sin conexión</string>
+    <string name="quick_picks">Selecciones rápidas</string>
     <string name="songs">Canciones</string>
     <string name="other_versions">Otras versiones</string>
     <string name="album_no_alternative_version">El álbum no tiene versiones alternativas</string>
     <string name="enqueue">Añadir a la cola</string>
     <string name="shuffle">Aleatorio</string>
     <string name="view_all">Mostrar todo</string>
-    <string name="from_wikipedia_cca">Da Wikipedia bajo Creative Commons Atribución CC-BY-SA 3.0</string>
-    <string name="overview">Panorámica</string>
-    <string name="singles">Individuales</string>
-    <string name="library">Librería</string>
-    <string name="artist_no_release_album">El artista no lanzó ningún álbum</string>
-    <string name="artist_no_release_single">El artista no ha lanzado ningún individuo</string>
-    <string name="delete_playlist">¿Realmente quieres eliminar la playlist?</string>
-    <string name="sync">Sincroniza</string>
-    <string name="rename">Cambia el nombre</string>
-    <string name="delete">Elimina</string>
-    <string name="enter_the_lyrics">Introduzca lyrics</string>
-    <string name="edit_lyrics">Modifica lyrics</string>
-    <string name="search_lyrics_online">Busca lyrics online</string>
-    <string name="fetch_lyrics_again">Recupera nuevamente lyrics</string>
+    <string name="from_wikipedia_cca">De Wikipedia bajo Creative Commons Atribución CC-BY-SA 3.0</string>
+    <string name="overview">Resumen</string>
+    <string name="singles">Sencillos</string>
+    <string name="library">Biblioteca</string>
+    <string name="artist_no_release_album">El artista no ha publicado ningún álbum</string>
+    <string name="artist_no_release_single">El artista no ha publicado ningún sencillo</string>
+    <string name="delete_playlist">¿Seguro que quieres eliminar la lista de reproducción?</string>
+    <string name="sync">Sincronizar</string>
+    <string name="rename">Cambiar el nombre</string>
+    <string name="delete">Eliminar</string>
+    <string name="enter_the_lyrics">Introducir la letra</string>
+    <string name="edit_lyrics">Modificar la letra</string>
+    <string name="search_lyrics_online">Buscar la letra online</string>
+    <string name="fetch_lyrics_again">Cargar la letra de nuevo</string>
     <string name="queue_loop">"Reproducción continua "</string>
     <string name="id">Id</string>
     <string name="itag">Itag</string>
-    <string name="bitrate">Bitrate</string>
+    <string name="bitrate">Tasa de bits</string>
     <string name="size">Tamaño</string>
     <string name="cached">Descargado</string>
     <string name="loudness">Volumen</string>
-    <string name="clear">Limpia</string>
-    <string name="error">Ha habido un error.</string>
-    <string name="enter_a_name">Busca</string>
+    <string name="clear">Limpiar</string>
+    <string name="error">Ha ocurrido un error.</string>
+    <string name="enter_a_name">Buscar</string>
     <string name="online">Online</string>
-    <string name="no_results_found">Sin resultados. Cambiar la clave de búsqueda o la categoría</string>
-    <string name="videos">Video</string>
-    <string name="featured">En primer plano</string>
+    <string name="no_results_found">Sin resultados. Cambia la clave de búsqueda o la categoría</string>
+    <string name="videos">Vídeos</string>
+    <string name="featured">Destacado</string>
     <string name="view_the_source_code">Ver el código fuente</string>
     <string name="report_an_issue">Reportar un error</string>
     <string name="you_will_be_redirected_to_github">Serás redirigido a GitHub</string>
@@ -66,98 +66,98 @@
     <string name="appearance">Apariencia</string>
     <string name="colors">COLORES</string>
     <string name="theme">Tema</string>
-    <string name="theme_mode">Modo tema</string>
+    <string name="theme_mode">Modo de tema</string>
     <string name="shapes">FORMAS</string>
     <string name="thumbnail_roundness">Miniaturas redondeadas</string>
     <string name="text">TEXTO</string>
     <string name="use_system_font">Usar fuentes del sistema</string>
-    <string name="use_font_by_the_system">Utilizar fuente aplicada por el sistema</string>
-    <string name="apply_font_padding">Aplicar relleno de carácter</string>
+    <string name="use_font_by_the_system">Utilizar la fuente aplicada por el sistema</string>
+    <string name="apply_font_padding">Aplicar relleno a la fuente</string>
     <string name="add_spacing_around_texts">Añadir espaciado en los textos</string>
     <string name="lockscreen">BLOQUEO DE PANTALLA</string>
     <string name="show_song_cover">Mostrar la portada de la canción</string>
     <string name="use_song_cover_on_lockscreen">Use la portada de la canción que se está reproduciendo como fondo de la pantalla de bloqueo</string>
     <string name="cache">Caché</string>
-    <string name="cache_cleared">Cuando la caché se queda sin espacio, los recursos a los que no se ha accedido durante el mayor tiempo se borran</string>
-    <string name="image_cache">CACHÉ IMÁGENES</string>
+    <string name="cache_cleared">Cuando la caché se queda sin espacio, los recursos a los que no se ha accedido durante más tiempo se borran</string>
+    <string name="image_cache">CACHÉ DE IMÁGENES</string>
     <string name="max_size">Tamaño máximo</string>
-    <string name="song_cache">CACHÉ CANCIONES</string>
+    <string name="song_cache">CACHÉ DE CANCIONES</string>
     <string name="database">Base de datos</string>
-    <string name="reset_quick_picks">Reset Métodos abreviados</string>
-    <string name="quick_picks_are_cleared">Métodos abreviados eliminados</string>
-    <string name="backup">BACKUP</string>
-    <string name="personal_preference">Se excluyen las preferencias personales (es decir, el modo de tema) y la caché.</string>
-    <string name="backup_1">Backup</string>
+    <string name="reset_quick_picks">Restablecer las selecciones rápidas</string>
+    <string name="quick_picks_are_cleared">Selecciones rápidas eliminadas</string>
+    <string name="backup">COPIA DE SEGURIDAD</string>
+    <string name="personal_preference">Se excluyen las preferencias personales (como el modo de tema) y la caché.</string>
+    <string name="backup_1">Copia de seguridad</string>
     <string name="export_the_database">Exportar la base de datos a un medio externo</string>
-    <string name="restore">RESTORE</string>
-    <string name="restore_1">Restore</string>
+    <string name="restore">RESTAURAR</string>
+    <string name="restore_1">Restaurar</string>
     <string name="import_the_database">Importar bases de datos desde un medio externo</string>
-    <string name="other">Otro</string>
+    <string name="other">Otros</string>
     <string name="android_auto">ANDROID AUTO</string>
-    <string name="enable_unknown_sources">Recuerda habilitar \"Orígenes desconocidos\" en la configuración del desarrollador de Android Auto.</string>
+    <string name="enable_unknown_sources">Recuerda habilitar \"Orígenes desconocidos\" en las opciones para desarrolladores de Android Auto.</string>
     <string name="android_auto_1">Android Auto</string>
-    <string name="enable_android_auto_support">Habilitar soporte para Android Auto</string>
+    <string name="enable_android_auto_support">Activar soporte para Android Auto</string>
     <string name="search_history">HISTORIAL DE BÚSQUEDA</string>
-    <string name="pause_search_history">Suspender el historial de búsqueda</string>
-    <string name="neither_save_new_searched_query">No guardar nuevas búsquedas ni mostrar el historial</string>
-    <string name="clear_search_history">Limpiar historial de búsqueda</string>
-    <string name="history_is_empty">El historial está en blanco</string>
-    <string name="service_lifetime">SERVICIO LIFETIME</string>
-    <string name="battery_optimizations_applied">Si se aplican las optimizaciones de la batería, la notificación de reproducción puede desaparecer repentinamente cuando se detiene.</string>
-    <string name="is_android12">A partir de Android 12, debe deshabilitar las optimizaciones de la batería para que la opción \"Servicio invencible\" surta efecto.</string>
-    <string name="ignore_battery_optimizations">Ignorar optimización de la batería</string>
+    <string name="pause_search_history">Pausar el historial de búsqueda</string>
+    <string name="neither_save_new_searched_query">No guardar las nuevas búsquedas ni mostrar el historial</string>
+    <string name="clear_search_history">Limpiar el historial de búsqueda</string>
+    <string name="history_is_empty">El historial está vacío</string>
+    <string name="service_lifetime">SERVICIO INVENCIBLE</string>
+    <string name="battery_optimizations_applied">Si se aplican las optimizaciones de la batería, la notificación de reproducción puede desaparecer repentinamente cuando se detiene la aplicación.</string>
+    <string name="is_android12">A partir de Android 12, debes deshabilitar las optimizaciones de la batería para que la opción \"Servicio invencible\" surta efecto.</string>
+    <string name="ignore_battery_optimizations">Ignorar la optimización de la batería</string>
     <string name="already_unrestricted">Ya sin restricciones</string>
     <string name="disable_background_restrictions">Desactivar las restricciones en segundo plano</string>
-    <string name="invincible_service">Invincible servicio</string>
-    <string name="turning_off_battery_optimizations_is_not_enough">Cuando desactivar las optimizaciones de la batería no es suficiente</string>
+    <string name="invincible_service">Servicio invencible</string>
+    <string name="turning_off_battery_optimizations_is_not_enough">Cuando desactivar la optimización de la batería no es suficiente</string>
     <string name="player_audio"><![CDATA[Player & Audio]]></string>
-    <string name="player">PLAYER</string>
+    <string name="player">Reproductor</string>
     <string name="persistent_queue">Cola persistente</string>
     <string name="save_and_restore_playing_songs">Guardar y restaurar la reproducción de canciones</string>
     <string name="resume_playback">Reanudar la reproducción</string>
-    <string name="when_device_is_connected">Cuando es collegato un dispositivo cablato o bluetooth</string>
+    <string name="when_device_is_connected">Cuando se conecta un dispositivo cableado o Bluetooth</string>
     <string name="audio">AUDIO</string>
-    <string name="skip_silence">Saltar el silencio</string>
+    <string name="skip_silence">Saltar los silencios</string>
     <string name="skip_silent_parts_during_playback">Omitir las partes silenciosas durante la reproducción</string>
     <string name="loudness_normalization">Normalización del volumen</string>
     <string name="autoadjust_the_volume">Ajustar el volumen a un nivel fijo</string>
     <string name="interact_with_the_system_equalizer">Interactúa con el ecualizador del sistema</string>
-    <string name="about">About</string>
-    <string name="more_of">Más sobre</string>
+    <string name="about">Acerca de</string>
+    <string name="more_of">Más de</string>
     <string name="sleep_timer">Temporizador apagado</string>
     <string name="left">%1$s restantes</string>
-    <string name="set">Establece</string>
-    <string name="play_next">Reproducir siguiente</string>
-    <string name="confirm">Confirma</string>
-    <string name="show">Muestra</string>
-    <string name="unsynchronized_lyrics">lyrics no sincronizadas</string>
-    <string name="synchronized_lyrics">lyrics sincronizadas</string>
+    <string name="set">Establecer</string>
+    <string name="play_next">Reproducir a continuación</string>
+    <string name="confirm">Confirmar</string>
+    <string name="show">Mostrar</string>
+    <string name="unsynchronized_lyrics">la letra no sincronizada</string>
+    <string name="synchronized_lyrics">la letra sincronizada</string>
     <string name="provided_by">Proporcionado por</string>
     <string name="cleanup">LIMPIEZA</string>
     <string name="delete_playback_events">Eliminar %1$s eventos de reproducción</string>
     <string name="existing_data_will_be_overwritten">Los datos existentes se sobrescribirán.\n%1$s se cerrará automáticamente después de restaurar la base de datos.</string>
     <string name="on_queue">en cola</string>
     <string name="folder_cache">CACHÉ DE CARPETA</string>
-    <string name="cache_reset_by_clicking_button">Atención, al hacer clic en el botón a continuación, la carpeta de ubicación de caché se restablecerá a la configuración predeterminada</string>
+    <string name="cache_reset_by_clicking_button">Cuidado, la carpeta de ubicación de la caché se restablecerá a la configuración predeterminada al pulsar el siguiente botón</string>
     <string name="cache_location_folder">Carpeta de ubicación</string>
-    <string name="custom_cache_from_android_10_may_not_be_available">A partir de Android 10, es posible que esta función no esté disponible</string>
-    <string name="reset_cache_location_folder">RESTABLECER CACHE</string>
+    <string name="custom_cache_from_android_10_may_not_be_available">Es posible que esta función no esté disponible a partir de Android 10</string>
+    <string name="reset_cache_location_folder">RESTABLECER CACHÉ</string>
     <string name="used">" usado"</string>
-    <string name="now_playing">Now playing...</string>
-    <string name="close_background_player">Close background player</string>
-    <string name="when_app_swipe_out_from_task_manager">When app swipe out from task manager</string>
-    <string name="opening_url">is loading...</string>
-    <string name="an_error_has_occurred_while_fetching_the_lyrics">An error has occurred while fetching the lyrics</string>
-    <string name="are_not_available_for_this_song">are not available for this song</string>
-    <string name="error_a_network_error_has_occurred">A network error has occurred</string>
-    <string name="error_couldn_t_find_a_playable_audio_format">Couldn\'t find a playable audio format</string>
-    <string name="error_the_original_video_source_of_this_song_has_been_deleted">The original video source of this song has been deleted</string>
-    <string name="error_this_song_cannot_be_played_due_to_server_restrictions">This song cannot be played due to server restrictions</string>
-    <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">The returned video id doesn\'t match the requested one</string>
-    <string name="error_an_unknown_playback_error_has_occurred">An unknown playback error has occurred</string>
-    <string name="tips">Tips</string>
-    <string name="next_playing">Next playing...</string>
-    <string name="quick_pics_and_tips">Quick Pics and Tips</string>
-    <string name="is_min_list_time_for_tips_or_quick_pics">It\'s the minimum listening time, to include the song as a possible Tips or Quick Pics</string>
-    <string name="min_listening_time">Min listening time</string>
+    <string name="now_playing">Reproduciendo…</string>
+    <string name="close_background_player">Cerrar el reproductor en segundo plano</string>
+    <string name="when_app_swipe_out_from_task_manager">Cuando se cierra la aplicación desde el administrador de tareas</string>
+    <string name="opening_url">está cargando…</string>
+    <string name="an_error_has_occurred_while_fetching_the_lyrics">Ha ocurrido un error al cargar la letra</string>
+    <string name="are_not_available_for_this_song">no está disponible para esta canción</string>
+    <string name="error_a_network_error_has_occurred">Ha ocurrido un error de conexión</string>
+    <string name="error_couldn_t_find_a_playable_audio_format">No se pudo encontrar un formato de audio compatible</string>
+    <string name="error_the_original_video_source_of_this_song_has_been_deleted">La fuente de vídeo original de está canción ha sido borrada</string>
+    <string name="error_this_song_cannot_be_played_due_to_server_restrictions">Esta canción no puede ser reproducida debido a restricciones del servidor</string>
+    <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">El identificador del vídeo no se corresponde con el que se solicitó</string>
+    <string name="error_an_unknown_playback_error_has_occurred">Ha ocurrido un error de reproducción desconocido</string>
+    <string name="tips">Recomendaciones</string>
+    <string name="next_playing">A continuación…</string>
+    <string name="quick_pics_and_tips">Selecciones rápidas y recomendaciones</string>
+    <string name="is_min_list_time_for_tips_or_quick_pics">Es el tiempo de reproducción mínimo para incluir la canción como una posible recomendación o selección rápida</string>
+    <string name="min_listening_time">Tiempo de reproducción mínimo</string>
 </resources>
