--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -76,7 +76,7 @@
     <string name="add_spacing_around_texts">Ajouter un espace autour des textes</string>
     <string name="lockscreen">ÉCRAN DE VERROUILLAGE</string>
     <string name="show_song_cover">Afficher la pochette d\'album</string>
-    <string name="use_song_cover_on_lockscreen">Afficher la pochette d\'album sur le fond d\'écran de l'écran de vérrouillage</string>
+    <string name="use_song_cover_on_lockscreen">Afficher la pochette d\'album sur le fond d\'écran de l\'écran de vérrouillage</string>
     <string name="cache">Cache</string>
     <string name="cache_cleared">Lorsque le cache manque d\'espace, les ressources les moins récemment consultées sont effacées</string>
     <string name="image_cache">CACHE D\'IMAGE</string>
@@ -160,4 +160,15 @@
     <string name="quick_pics_and_tips">Sélection rapide et recommandations</string>
     <string name="is_min_list_time_for_tips_or_quick_pics">C\'est la durée d\'écoute minimale pour inclure la chanson comme une suggestion possible pour la sélection rapide et les recommandations</string>
     <string name="min_listening_time">Durée d\'écoute minimale</string>
+    <string name="player_thumbnail_size">Thumbnail Size</string>
+    <string name="restarting_rimusic_is_required">Restarting is required</string>
+    <string name="size_name">Size</string>
+    <string name="current_size_name">"Current size "</string>
+    <string name="current_shape_name">Current shape</string>
+    <string name="i18_small">Small</string>
+    <string name="i18_medium">Medium</string>
+    <string name="i18_big">Big</string>
+    <string name="i18_none">None</string>
+    <string name="i18_light">Light</string>
+    <string name="i18_heavy">Heavy</string>
 </resources>
