--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -160,4 +160,15 @@
     <string name="quick_pics_and_tips">Scelte rapide e Suggerimenti</string>
     <string name="is_min_list_time_for_tips_or_quick_pics">È il tempo minimo di ascolto, per includere la canzone come eventuali Suggerimenti e Scelte rapide</string>
     <string name="min_listening_time">Tempo minimo di ascolto</string>
+    <string name="player_thumbnail_size">Grandezza miniatura</string>
+    <string name="restarting_rimusic_is_required">E\' richiesto il riavvio</string>
+    <string name="size_name">Grandezza</string>
+    <string name="current_size_name">Grandezza attuale</string>
+    <string name="current_shape_name">Forma attuale</string>
+    <string name="i18_small">Piccolo</string>
+    <string name="i18_medium">Medio</string>
+    <string name="i18_big">Grande</string>
+    <string name="i18_none">Nessuno</string>
+    <string name="i18_light">Leggero</string>
+    <string name="i18_heavy">Pesante</string>
 </resources>
