--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -160,4 +160,15 @@
     <string name="quick_pics_and_tips">Kısayollar and İpuçları</string>
     <string name="is_min_list_time_for_tips_or_quick_pics">Şarkıyı mümkün olduğunca dahil etmek için minimum dinleme süresi İpuçları or Kısayollar</string>
     <string name="min_listening_time">Min dinleme süresi</string>
+    <string name="player_thumbnail_size">Küçük resim boyutu</string>
+    <string name="restarting_rimusic_is_required">Yeniden başlatma gerekli</string>
+    <string name="size_name">Boyut</string>
+    <string name="current_size_name">Şu anki boyutu</string>
+    <string name="current_shape_name">Mevcut şekil</string>
+    <string name="i18_small">Küçük</string>
+    <string name="i18_medium">Orta</string>
+    <string name="i18_big">Büyük</string>
+    <string name="i18_none">Hiçbiri</string>
+    <string name="i18_light">Işıkt</string>
+    <string name="i18_heavy">Ağır</string>
 </resources>
