Update French translation

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -75,10 +75,10 @@
     <string name="apply_font_padding">Appliquer un remplissage</string>
     <string name="add_spacing_around_texts">Ajouter un espace autour des textes</string>
     <string name="lockscreen">ÉCRAN DE VERROUILLAGE</string>
-    <string name="show_song_cover">Afficher la pochette d'album</string>
-    <string name="use_song_cover_on_lockscreen">Afficher la pochette d'album sur le fond d'écran de l'écran de vérrouillage</string>
+    <string name="show_song_cover">Afficher la pochette d\'album</string>
+    <string name="use_song_cover_on_lockscreen">Afficher la pochette d\'album sur le fond d\'écran de l\'écran de vérrouillage</string>
     <string name="cache">Cache</string>
-    <string name="cache_cleared">Lorsque le cache manque d'espace, les ressources les moins récemment consultées sont effacées</string>
+    <string name="cache_cleared">Lorsque le cache manque d\'espace, les ressources les moins récemment consultées sont effacées</string>
     <string name="image_cache">CACHE D\'IMAGE</string>
     <string name="max_size">Taille max</string>
     <string name="song_cache">CACHE DES CHANSONS</string>
@@ -121,7 +121,7 @@
     <string name="skip_silent_parts_during_playback">Ignorer les parties silencieuses pendant la lecture</string>
     <string name="loudness_normalization">Normalisation du volume</string>
     <string name="autoadjust_the_volume">Régler le volume à un niveau fixe</string>
-    <string name="interact_with_the_system_equalizer">Paramètre de l'égaliseur du système</string>
+    <string name="interact_with_the_system_equalizer">Paramètre de l\'égaliseur du système</string>
     <string name="about">À propos</string>
     <string name="more_of">Plus de</string>
     <string name="sleep_timer">Minuterie d\'arrêt</string>
@@ -148,16 +148,27 @@
     <string name="when_app_swipe_out_from_task_manager">Lorsque vous faites glisser en dehors du gestionnaire des applications récentes)</string>
     <string name="opening_url">est entrain de charger...</string>
     <string name="an_error_has_occurred_while_fetching_the_lyrics">Une erreur est apparue lors de la récupération des paroles</string>
-    <string name="are_not_available_for_this_song">n'est pas disponibles pour cette chanson</string>
+    <string name="are_not_available_for_this_song">n\'est pas disponibles pour cette chanson</string>
     <string name="error_a_network_error_has_occurred">Une erreur réseau est apparue</string>
     <string name="error_couldn_t_find_a_playable_audio_format">Ne peut pas trouver un format audio jouable</string>
     <string name="error_the_original_video_source_of_this_song_has_been_deleted">La source vidéo originale de cette chanson a été supprimée</string>
     <string name="error_this_song_cannot_be_played_due_to_server_restrictions">Cette chanson ne peut pas être lue en raison de restrictions du serveur</string>
-    <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">L'identifiant vidéo retourné ne correspond pas à celui demandé</string>
-    <string name="error_an_unknown_playback_error_has_occurred">Une erreur de lecture inconnue s'est produite</string>
+    <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">L\'identifiant vidéo retourné ne correspond pas à celui demandé</string>
+    <string name="error_an_unknown_playback_error_has_occurred">Une erreur de lecture inconnue s\'est produite</string>
     <string name="tips">Recommandations</string>
     <string name="next_playing">Prochaine en lecture...</string>
     <string name="quick_pics_and_tips">Sélection rapide et recommandations</string>
-    <string name="is_min_list_time_for_tips_or_quick_pics">C'est la durée d'écoute minimale pour inclure la chanson comme une suggestion possible pour la sélection rapide et les recommandations</string>
-    <string name="min_listening_time">Durée d'écoute minimale</string>
+    <string name="is_min_list_time_for_tips_or_quick_pics">C\'est la durée d\'écoute minimale pour inclure la chanson comme une suggestion possible pour la sélection rapide et les recommandations</string>
+    <string name="min_listening_time">Durée d\'écoute minimale</string>
+    <string name="player_thumbnail_size">Thumbnail Size</string>
+    <string name="restarting_rimusic_is_required">Restarting is required</string>
+    <string name="size_name">Size</string>
+    <string name="current_size_name">"Current size "</string>
+    <string name="current_shape_name">Current shape</string>
+    <string name="i18_small">Small</string>
+    <string name="i18_medium">Medium</string>
+    <string name="i18_big">Big</string>
+    <string name="i18_none">None</string>
+    <string name="i18_light">Light</string>
+    <string name="i18_heavy">Heavy</string>
 </resources>
