--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -171,4 +171,7 @@
     <string name="i18_none">Nessuno</string>
     <string name="i18_light">Leggero</string>
     <string name="i18_heavy">Pesante</string>
+    <string name="effects">Effects</string>
+    <string name="player_rotating_buttons">Rotating buttons</string>
+    <string name="player_enable_rotation_buttons">Enable rotation of buttons when clicked</string>
 </resources>
