--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -137,38 +137,38 @@
     <string name="delete_playback_events">Удалить %1$s События воспроизведения</string>
     <string name="existing_data_will_be_overwritten">Существующие данные перезаписываются.\n%1$s автоматически закрывается после восстановления базы данных.</string>
     <string name="on_queue">в очереди</string>
-    <string name="folder_cache">FOLDER CACHE</string>
-    <string name="cache_reset_by_clicking_button">Attention by clicking on the button below, the cache location folder will be reset to the default</string>
-    <string name="cache_location_folder">Location folder</string>
-    <string name="custom_cache_from_android_10_may_not_be_available">From Android 10, this feature may not be available</string>
-    <string name="reset_cache_location_folder">RESET CACHE LOCATION FOLDER</string>
-    <string name="used">" used"</string>
-    <string name="now_playing">Now playing...</string>
-    <string name="close_background_player">Close background player</string>
-    <string name="when_app_swipe_out_from_task_manager">When app swipe out from task manager</string>
-    <string name="opening_url">is loading...</string>
-    <string name="an_error_has_occurred_while_fetching_the_lyrics">An error has occurred while fetching the lyrics</string>
-    <string name="are_not_available_for_this_song">are not available for this song</string>
-    <string name="error_a_network_error_has_occurred">A network error has occurred</string>
-    <string name="error_couldn_t_find_a_playable_audio_format">Couldn\'t find a playable audio format</string>
-    <string name="error_the_original_video_source_of_this_song_has_been_deleted">The original video source of this song has been deleted</string>
-    <string name="error_this_song_cannot_be_played_due_to_server_restrictions">This song cannot be played due to server restrictions</string>
-    <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">The returned video id doesn\'t match the requested one</string>
-    <string name="error_an_unknown_playback_error_has_occurred">An unknown playback error has occurred</string>
-    <string name="tips">Tips</string>
-    <string name="next_playing">Next playing...</string>
-    <string name="quick_pics_and_tips">Quick Pics and Tips</string>
-    <string name="is_min_list_time_for_tips_or_quick_pics">It\'s the minimum listening time, to include the song as a possible Tips or Quick Pics</string>
-    <string name="min_listening_time">Min listening time</string>
-    <string name="player_thumbnail_size">Thumbnail Size</string>
-    <string name="restarting_rimusic_is_required">Restarting is required</string>
-    <string name="size_name">Size</string>
-    <string name="current_size_name">"Current size "</string>
-    <string name="current_shape_name">Current shape</string>
-    <string name="i18_small">Small</string>
-    <string name="i18_medium">Medium</string>
-    <string name="i18_big">Big</string>
-    <string name="i18_none">None</string>
-    <string name="i18_light">Light</string>
-    <string name="i18_heavy">Heavy</string>
+    <string name="folder_cache">Кэш-папка</string>
+    <string name="cache_reset_by_clicking_button">Внимание, нажав на кнопку ниже, папка расположения кэша будет сброшена на значение по умолчанию.</string>
+    <string name="cache_location_folder">Папка расположения</string>
+    <string name="custom_cache_from_android_10_may_not_be_available">Начиная с Android 10, эта функция может быть недоступна</string>
+    <string name="reset_cache_location_folder">СБРОС ПАПКИ РАСПОЛОЖЕНИЯ КЭШ-ПАМЯТИ</string>
+    <string name="used">" используется"</string>
+    <string name="now_playing">Сейчас играет...</string>
+    <string name="close_background_player">Закрыть фоновый проигрыватель</string>
+    <string name="when_app_swipe_out_from_task_manager">Когда приложение смахивает из диспетчера задач</string>
+    <string name="opening_url">загружается...</string>
+    <string name="an_error_has_occurred_while_fetching_the_lyrics">При загрузке текста произошла ошибка.</string>
+    <string name="are_not_available_for_this_song">недоступны для этой песни</string>
+    <string name="error_a_network_error_has_occurred">Произошла сетевая ошибка</string>
+    <string name="error_couldn_t_find_a_playable_audio_format">Не удалось найти воспроизводимый аудиоформат.</string>
+    <string name="error_the_original_video_source_of_this_song_has_been_deleted">Исходное видео этой песни удалено.</string>
+    <string name="error_this_song_cannot_be_played_due_to_server_restrictions">Эту песню невозможно воспроизвести из-за ограничений сервера.</string>
+    <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">Возвращенный идентификатор видео не соответствует запрошенному.</string>
+    <string name="error_an_unknown_playback_error_has_occurred">Произошла неизвестная ошибка воспроизведения.</string>
+    <string name="tips">Советы</string>
+    <string name="next_playing">Следующая звучит...</string>
+    <string name="quick_pics_and_tips">Обзор  советы</string>
+    <string name="is_min_list_time_for_tips_or_quick_pics">Минимальное время прослушивания, чтобы включить песню в список возможных советов или Обзора</string>
+    <string name="min_listening_time">Минимальное время прослушивания</string>
+    <string name="player_thumbnail_size">Размер миниатюры</string>
+    <string name="restarting_rimusic_is_required">Требуется перезагрузка</string>
+    <string name="size_name">Размер</string>
+    <string name="current_size_name">"Текущий размер "</string>
+    <string name="current_shape_name">Текущая форма</string>
+    <string name="i18_small">Маленький</string>
+    <string name="i18_medium">Средний</string>
+    <string name="i18_big">Большой</string>
+    <string name="i18_none">Нет</string>
+    <string name="i18_light">Легко</string>
+    <string name="i18_heavy">Тяжелый</string>
 </resources>
