--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -160,8 +160,8 @@
     <string name="quick_pics_and_tips">Sélection rapide et recommandations</string>
     <string name="is_min_list_time_for_tips_or_quick_pics">C\'est la durée d\'écoute minimale pour inclure la chanson comme une suggestion possible pour la sélection rapide et les recommandations</string>
     <string name="min_listening_time">Durée d\'écoute minimale</string>
-    <string name="player_thumbnail_size">Taille de la pochette d'album</string>
-    <string name="restarting_rimusic_is_required">Un redémarrage est requis pour pouvoir l'appliquer</string>
+    <string name="player_thumbnail_size">Taille de la pochette d\'album</string>
+    <string name="restarting_rimusic_is_required">Un redémarrage est requis pour pouvoir l\'appliquer</string>
     <string name="size_name">Taille</string>
     <string name="current_size_name">"Taille de la pochette d'album actuelle"</string>
     <string name="current_shape_name">Arrondissement des coins actuel</string>
