Fix app icon on player background Settings Improvements

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -67,8 +67,8 @@
     <string name="colors">COLORI</string>
     <string name="theme">Tema</string>
     <string name="theme_mode">Modalità tema</string>
-    <string name="shapes">MINIATURE</string>
-    <string name="thumbnail_roundness">Miniature arrotondate</string>
+    <string name="shapes">FORME</string>
+    <string name="thumbnail_roundness">Angoli arrotondati</string>
     <string name="text">TESTO</string>
     <string name="use_system_font">Usa font di sistema</string>
     <string name="use_font_by_the_system">Usa font applicato dal sistema</string>
@@ -160,9 +160,9 @@
     <string name="quick_pics_and_tips">Scelte rapide e Suggerimenti</string>
     <string name="is_min_list_time_for_tips_or_quick_pics">È il tempo minimo di ascolto, per includere la canzone come eventuali Suggerimenti e Scelte rapide</string>
     <string name="min_listening_time">Tempo minimo di ascolto</string>
-    <string name="player_thumbnail_size">Grandezza miniatura</string>
+    <string name="player_thumbnail_size">Grandezza anteprima</string>
     <string name="restarting_rimusic_is_required">E\' richiesto il riavvio</string>
-    <string name="size_name">Grandezza</string>
+    <string name="size_name">Livello</string>
     <string name="current_size_name">Grandezza attuale</string>
     <string name="current_shape_name">Arotondamento attuale</string>
     <string name="i18_small">Piccolo</string>
@@ -171,7 +171,7 @@
     <string name="i18_none">Nessuno</string>
     <string name="i18_light">Leggero</string>
     <string name="i18_heavy">Pesante</string>
-    <string name="effects">Effects</string>
-    <string name="player_rotating_buttons">Rotating buttons</string>
-    <string name="player_enable_rotation_buttons">Enable rotation of buttons when clicked</string>
+    <string name="effects">Effetti</string>
+    <string name="player_rotating_buttons">Rotazione pulsanti</string>
+    <string name="player_enable_rotation_buttons">Abilita la rotazione dei pulsanti</string>
 </resources>
